<resources>
    <string name="app_name">BelajarFirebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register?</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_gmail">Sign In Gmail</string>
</resources>